# ai-teaching-assistant

./: .gitignore  .remarkrc.cjs  Makefile  README.md  ai_teaching_assistant_plan_working_doc_markdown_python_mvp.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
api/: deps.py  main.py  models.py  schemas.py
api/routers/: attempt.py  lesson.py  progress.py
content/markdown/blocks/: md-headings-02.yaml  md-links-images-01.yaml  md-lists-01.yaml
content/markdown/exercises/: MD-001.json  MD-004.json  MD-008.json
content/python/blocks/: py-conds-01.yaml  py-io-01.yaml  py-loops-01.yaml
content/python/exercises/: PY-013.json  PY-017.json  PY-019.json  PY-025.json  PY-031.json
migrations/: 0001_initial.sql
runners/markdown-check/: Dockerfile  index.mjs  package.json
runners/python/: Dockerfile  requirements.txt  run_tests.py
